{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 862,
  "lineage": "106814e0-0f70-f28e-1aeb-ee672e3ab770",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:708779265549:loadbalancer/app/tf-cloudfront-alb/89f98f9389533b5d",
            "arn_suffix": "app/tf-cloudfront-alb/89f98f9389533b5d",
            "desync_mitigation_mode": "defensive",
            "dns_name": "tf-cloudfront-alb-1568255376.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:708779265549:loadbalancer/app/tf-cloudfront-alb/89f98f9389533b5d",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "tf-cloudfront-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0cc2867d415f21bd0"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-055efdd88a14f83f5"
              },
              {
                "subnet_id": "subnet-0bb6d684ebaa20d02"
              }
            ],
            "subnets": [
              "subnet-055efdd88a14f83f5",
              "subnet-0bb6d684ebaa20d02"
            ],
            "tags": {
              "tag_application_code": "Cloud7"
            },
            "tags_all": {
              "tag_application_code": "Cloud7"
            },
            "vpc_id": "vpc-09da79c642f979f7a",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "dependencies": [
            "aws_security_group.alb_ingress",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "grafana_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:708779265549:loadbalancer/app/tf-granfana-alb/92f81b6aaccecca1",
            "arn_suffix": "app/tf-granfana-alb/92f81b6aaccecca1",
            "desync_mitigation_mode": "defensive",
            "dns_name": "tf-granfana-alb-444189994.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:708779265549:loadbalancer/app/tf-granfana-alb/92f81b6aaccecca1",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "tf-granfana-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0d9a095491a2772b8"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-055efdd88a14f83f5"
              },
              {
                "subnet_id": "subnet-0bb6d684ebaa20d02"
              }
            ],
            "subnets": [
              "subnet-055efdd88a14f83f5",
              "subnet-0bb6d684ebaa20d02"
            ],
            "tags": {
              "tag_application_code": "Cloud7"
            },
            "tags_all": {
              "tag_application_code": "Cloud7"
            },
            "vpc_id": "vpc-09da79c642f979f7a",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "dependencies": [
            "aws_security_group.grafana_alb_ingress",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:708779265549:listener/app/tf-cloudfront-alb/89f98f9389533b5d/622cd39d855b5fdb",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:708779265549:targetgroup/tf-cloudfront-alb-tg/62b8415deac32ef1",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:708779265549:listener/app/tf-cloudfront-alb/89f98f9389533b5d/622cd39d855b5fdb",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:708779265549:loadbalancer/app/tf-cloudfront-alb/89f98f9389533b5d",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "tag_application_code": "Cloud7"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.alb",
            "aws_lb_target_group.alb_tg",
            "aws_security_group.alb_ingress",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "grafana_alb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:708779265549:listener/app/tf-granfana-alb/92f81b6aaccecca1/0feb3a5742a5977a",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:708779265549:targetgroup/tf-grafana-alb-tg/43d5c9d7b952140c",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:708779265549:listener/app/tf-granfana-alb/92f81b6aaccecca1/0feb3a5742a5977a",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:708779265549:loadbalancer/app/tf-granfana-alb/92f81b6aaccecca1",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "tag_application_code": "Cloud7"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.grafana_alb",
            "aws_lb_target_group.grafana_alb_tg",
            "aws_security_group.grafana_alb_ingress",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:708779265549:targetgroup/tf-cloudfront-alb-tg/62b8415deac32ef1",
            "arn_suffix": "targetgroup/tf-cloudfront-alb-tg/62b8415deac32ef1",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 10,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:708779265549:targetgroup/tf-cloudfront-alb-tg/62b8415deac32ef1",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tf-cloudfront-alb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "tag_application_code": "Cloud7"
            },
            "tags_all": {
              "tag_application_code": "Cloud7"
            },
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-09da79c642f979f7a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "grafana_alb_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:708779265549:targetgroup/tf-grafana-alb-tg/43d5c9d7b952140c",
            "arn_suffix": "targetgroup/tf-grafana-alb-tg/43d5c9d7b952140c",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 10,
                "matcher": "200",
                "path": "/",
                "port": "3000",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:708779265549:targetgroup/tf-grafana-alb-tg/43d5c9d7b952140c",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tf-grafana-alb-tg",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "tag_application_code": "Cloud7"
            },
            "tags_all": {
              "tag_application_code": "Cloud7"
            },
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-09da79c642f979f7a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "acl_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 80,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3498083913",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-06ee4217e8067fc8c",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 103,
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "acl_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 443,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1260767782",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-06ee4217e8067fc8c",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 102,
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:708779265549:security-group/sg-0cc2867d415f21bd0",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cc2867d415f21bd0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alg_http_ingress",
            "name_prefix": "",
            "owner_id": "708779265549",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "tag_application_code": "Cloud7"
            },
            "timeouts": null,
            "vpc_id": "vpc-09da79c642f979f7a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:708779265549:security-group/sg-0d8f6e88825d9e0e9",
            "description": "Used for autoscale group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d8f6e88825d9e0e9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ec2_http_ingress",
            "name_prefix": "",
            "owner_id": "708779265549",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "tag_application_code": "Cloud7"
            },
            "timeouts": null,
            "vpc_id": "vpc-09da79c642f979f7a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_ingress_grafana",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:708779265549:security-group/sg-0bc1bf589c07bd776",
            "description": "Used for autoscale group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bc1bf589c07bd776",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ec2_http_ingress_grafana",
            "name_prefix": "",
            "owner_id": "708779265549",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "tag_application_code": "Cloud7"
            },
            "timeouts": null,
            "vpc_id": "vpc-09da79c642f979f7a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "grafana_alb_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:708779265549:security-group/sg-0d9a095491a2772b8",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d9a095491a2772b8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "grafana_alg_http_ingress",
            "name_prefix": "",
            "owner_id": "708779265549",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "tag_application_code": "Cloud7"
            },
            "timeouts": null,
            "vpc_id": "vpc-09da79c642f979f7a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "dynamodb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:708779265549:vpc-endpoint/vpce-050232160eca59296",
            "cidr_blocks": [
              "35.71.118.0/25",
              "52.94.11.0/24",
              "35.71.118.128/26"
            ],
            "id": "vpce-050232160eca59296",
            "owner_id": "708779265549",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-67a5400e",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-06e4b8efe86da08d6",
              "rtb-096b82bc2854b4351"
            ],
            "service_name": "com.amazonaws.ap-southeast-1.dynamodb",
            "state": "available",
            "tags_all": {
              "tag_application_code": "Cloud7"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-09da79c642f979f7a"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:708779265549:network-acl/acl-06ee4217e8067fc8c",
            "default_network_acl_id": "acl-06ee4217e8067fc8c",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-06ee4217e8067fc8c",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": null,
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": null,
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              }
            ],
            "owner_id": "708779265549",
            "subnet_ids": [
              "subnet-01a1e7878db2a2d0b",
              "subnet-055efdd88a14f83f5",
              "subnet-097742b3c76d12197",
              "subnet-0bb6d684ebaa20d02"
            ],
            "tags": {
              "Name": "tf-vpc-default",
              "tag_application_code": "Cloud7"
            },
            "tags_all": {
              "Name": "tf-vpc-default",
              "tag_application_code": "Cloud7"
            },
            "vpc_id": "vpc-09da79c642f979f7a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:708779265549:route-table/rtb-0bf9e9191655c27ab",
            "default_route_table_id": "rtb-0bf9e9191655c27ab",
            "id": "rtb-0bf9e9191655c27ab",
            "owner_id": "708779265549",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "tf-vpc-default",
              "tag_application_code": "Cloud7"
            },
            "tags_all": {
              "Name": "tf-vpc-default",
              "tag_application_code": "Cloud7"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-09da79c642f979f7a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:708779265549:security-group/sg-0df887834fe970bf3",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0df887834fe970bf3",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "708779265549",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tf-vpc-default",
              "tag_application_code": "Cloud7"
            },
            "tags_all": {
              "Name": "tf-vpc-default",
              "tag_application_code": "Cloud7"
            },
            "vpc_id": "vpc-09da79c642f979f7a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-075e6b3bb118ee633",
            "association_id": "eipassoc-0103a45701cf93422",
            "domain": "vpc",
            "id": "eipalloc-075e6b3bb118ee633",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-030bef1f7263222a6",
            "private_dns": "ip-10-10-0-186.ap-southeast-1.compute.internal",
            "private_ip": "10.10.0.186",
            "public_dns": "ec2-13-213-198-196.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "13.213.198.196",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "tf-vpc-ap-southeast-1a",
              "tag_application_code": "Cloud7"
            },
            "tags_all": {
              "Name": "tf-vpc-ap-southeast-1a",
              "tag_application_code": "Cloud7"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bda71db0f102a06c",
            "association_id": "eipassoc-0814d7e22a9a40d7e",
            "domain": "vpc",
            "id": "eipalloc-0bda71db0f102a06c",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-0a9678d3c2648209b",
            "private_dns": "ip-10-10-1-21.ap-southeast-1.compute.internal",
            "private_ip": "10.10.1.21",
            "public_dns": "ec2-18-136-0-38.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "18.136.0.38",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "tf-vpc-ap-southeast-1b",
              "tag_application_code": "Cloud7"
            },
            "tags_all": {
              "Name": "tf-vpc-ap-southeast-1b",
              "tag_application_code": "Cloud7"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:708779265549:internet-gateway/igw-0f37067a53e68a6cb",
            "id": "igw-0f37067a53e68a6cb",
            "owner_id": "708779265549",
            "tags": {
              "Name": "tf-vpc",
              "tag_application_code": "Cloud7"
            },
            "tags_all": {
              "Name": "tf-vpc",
              "tag_application_code": "Cloud7"
            },
            "vpc_id": "vpc-09da79c642f979f7a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-075e6b3bb118ee633",
            "association_id": "eipassoc-0103a45701cf93422",
            "connectivity_type": "public",
            "id": "nat-047a3bf0e3f794fbc",
            "network_interface_id": "eni-030bef1f7263222a6",
            "private_ip": "10.10.0.186",
            "public_ip": "13.213.198.196",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-055efdd88a14f83f5",
            "tags": {
              "Name": "tf-vpc-ap-southeast-1a",
              "tag_application_code": "Cloud7"
            },
            "tags_all": {
              "Name": "tf-vpc-ap-southeast-1a",
              "tag_application_code": "Cloud7"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bda71db0f102a06c",
            "association_id": "eipassoc-0814d7e22a9a40d7e",
            "connectivity_type": "public",
            "id": "nat-0690a1e3426dc146a",
            "network_interface_id": "eni-0a9678d3c2648209b",
            "private_ip": "10.10.1.21",
            "public_ip": "18.136.0.38",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0bb6d684ebaa20d02",
            "tags": {
              "Name": "tf-vpc-ap-southeast-1b",
              "tag_application_code": "Cloud7"
            },
            "tags_all": {
              "Name": "tf-vpc-ap-southeast-1b",
              "tag_application_code": "Cloud7"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-06e4b8efe86da08d61080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-047a3bf0e3f794fbc",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06e4b8efe86da08d6",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-096b82bc2854b43511080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0690a1e3426dc146a",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-096b82bc2854b4351",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0f37067a53e68a6cb",
            "id": "r-rtb-04375f664feffc46f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04375f664feffc46f",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:708779265549:route-table/rtb-06e4b8efe86da08d6",
            "id": "rtb-06e4b8efe86da08d6",
            "owner_id": "708779265549",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-047a3bf0e3f794fbc",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tf-vpc-private-ap-southeast-1a",
              "tag_application_code": "Cloud7"
            },
            "tags_all": {
              "Name": "tf-vpc-private-ap-southeast-1a",
              "tag_application_code": "Cloud7"
            },
            "timeouts": null,
            "vpc_id": "vpc-09da79c642f979f7a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:708779265549:route-table/rtb-096b82bc2854b4351",
            "id": "rtb-096b82bc2854b4351",
            "owner_id": "708779265549",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0690a1e3426dc146a",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tf-vpc-private-ap-southeast-1b",
              "tag_application_code": "Cloud7"
            },
            "tags_all": {
              "Name": "tf-vpc-private-ap-southeast-1b",
              "tag_application_code": "Cloud7"
            },
            "timeouts": null,
            "vpc_id": "vpc-09da79c642f979f7a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:708779265549:route-table/rtb-04375f664feffc46f",
            "id": "rtb-04375f664feffc46f",
            "owner_id": "708779265549",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f37067a53e68a6cb",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tf-vpc-public",
              "tag_application_code": "Cloud7"
            },
            "tags_all": {
              "Name": "tf-vpc-public",
              "tag_application_code": "Cloud7"
            },
            "timeouts": null,
            "vpc_id": "vpc-09da79c642f979f7a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-033cce5e18201622b",
            "route_table_id": "rtb-06e4b8efe86da08d6",
            "subnet_id": "subnet-097742b3c76d12197"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01420b9a4a66ebb40",
            "route_table_id": "rtb-096b82bc2854b4351",
            "subnet_id": "subnet-01a1e7878db2a2d0b"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f075ac5794591b09",
            "route_table_id": "rtb-04375f664feffc46f",
            "subnet_id": "subnet-055efdd88a14f83f5"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ec5ddec63488ea2d",
            "route_table_id": "rtb-04375f664feffc46f",
            "subnet_id": "subnet-0bb6d684ebaa20d02"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:708779265549:subnet/subnet-097742b3c76d12197",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.10.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-097742b3c76d12197",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "708779265549",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tf-vpc-private-ap-southeast-1a",
              "tag_application_code": "Cloud7"
            },
            "tags_all": {
              "Name": "tf-vpc-private-ap-southeast-1a",
              "tag_application_code": "Cloud7"
            },
            "vpc_id": "vpc-09da79c642f979f7a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:708779265549:subnet/subnet-01a1e7878db2a2d0b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.10.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01a1e7878db2a2d0b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "708779265549",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tf-vpc-private-ap-southeast-1b",
              "tag_application_code": "Cloud7"
            },
            "tags_all": {
              "Name": "tf-vpc-private-ap-southeast-1b",
              "tag_application_code": "Cloud7"
            },
            "vpc_id": "vpc-09da79c642f979f7a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:708779265549:subnet/subnet-055efdd88a14f83f5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.10.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-055efdd88a14f83f5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "708779265549",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tf-vpc-public-ap-southeast-1a",
              "tag_application_code": "Cloud7"
            },
            "tags_all": {
              "Name": "tf-vpc-public-ap-southeast-1a",
              "tag_application_code": "Cloud7"
            },
            "vpc_id": "vpc-09da79c642f979f7a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:708779265549:subnet/subnet-0bb6d684ebaa20d02",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bb6d684ebaa20d02",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "708779265549",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tf-vpc-public-ap-southeast-1b",
              "tag_application_code": "Cloud7"
            },
            "tags_all": {
              "Name": "tf-vpc-public-ap-southeast-1b",
              "tag_application_code": "Cloud7"
            },
            "vpc_id": "vpc-09da79c642f979f7a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:708779265549:vpc/vpc-09da79c642f979f7a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-06ee4217e8067fc8c",
            "default_route_table_id": "rtb-0bf9e9191655c27ab",
            "default_security_group_id": "sg-0df887834fe970bf3",
            "dhcp_options_id": "dopt-024e1e1c1ff210d61",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09da79c642f979f7a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0bf9e9191655c27ab",
            "owner_id": "708779265549",
            "tags": {
              "Name": "tf-vpc",
              "tag_application_code": "Cloud7"
            },
            "tags_all": {
              "Name": "tf-vpc",
              "tag_application_code": "Cloud7"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}